// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EC - Accordion2 renders correctly 1`] = `
<test>
  <div
    class="ecl-accordion2"
    data-ecl-accordion2=""
    data-ecl-auto-init="Accordion2"
  >
    <div
      class="ecl-accordion2__item"
    >
      <h3
        class="ecl-accordion2__title"
      >
        <button
          aria-controls="accordion-example-content"
          class="ecl-accordion2__toggle"
          data-ecl-accordion2-toggle=""
          type="button"
        >
          <span
            class="ecl-accordion2__toggle-flex"
          >
            <svg
              aria-hidden="true"
              class="ecl-icon ecl-icon--m ecl-accordion2__toggle-icon"
              data-ecl-accordion2-icon=""
              focusable="false"
            >
              <use
                xlink:href="static/icons#ui--plus"
              />
            </svg>
            <span
              class="ecl-accordion2__toggle-title"
            >
              Delivery of last pending proposals, a common Destiny of unity, the hour of European Democracy
            </span>
          </span>
        </button>
      </h3>
      <div
        class="ecl-accordion2__content"
        hidden=""
        id="accordion-example-content"
        role="region"
      >
        The College of Commissioners held today the first weekly meeting of 2019 which was devoted to discussing the challenges of this new year. Commissioners used the opportunity to take stock and discuss the year ahead, including the European elections in May and other important milestones ahead.
      </div>
    </div>
    <div
      class="ecl-accordion2__item"
    >
      <h3
        class="ecl-accordion2__title"
      >
        <button
          aria-controls="accordion-example2-content"
          class="ecl-accordion2__toggle"
          data-ecl-accordion2-toggle=""
          type="button"
        >
          <span
            class="ecl-accordion2__toggle-flex"
          >
            <svg
              aria-hidden="true"
              class="ecl-icon ecl-icon--m ecl-accordion2__toggle-icon"
              data-ecl-accordion2-icon=""
              focusable="false"
            >
              <use
                xlink:href="static/icons#ui--plus"
              />
            </svg>
            <span
              class="ecl-accordion2__toggle-title"
            >
              Spring 2019 Economic Forecast: Growth continues at a more moderate pace
            </span>
          </span>
        </button>
      </h3>
      <div
        class="ecl-accordion2__content"
        hidden=""
        id="accordion-example2-content"
        role="region"
      >
        The European economy is forecast to continue expanding for the seventh year in a row in 2019, with real GDP expected to grow in all EU Member States. As global uncertainties continue to weigh, domestic dynamics are set to support the European economy. Growth is expected to gather pace again next year.
      </div>
    </div>
    <div
      class="ecl-accordion2__item"
    >
      <h3
        class="ecl-accordion2__title"
      >
        <button
          aria-controls="accordion-example3-content"
          class="ecl-accordion2__toggle"
          data-ecl-accordion2-toggle=""
          type="button"
        >
          <span
            class="ecl-accordion2__toggle-flex"
          >
            <svg
              aria-hidden="true"
              class="ecl-icon ecl-icon--m ecl-accordion2__toggle-icon"
              data-ecl-accordion2-icon=""
              focusable="false"
            >
              <use
                xlink:href="static/icons#ui--plus"
              />
            </svg>
            <span
              class="ecl-accordion2__toggle-title"
            >
              Delivery of last pending proposals, a common Destiny of unity, the hour of European Democracy
            </span>
          </span>
        </button>
      </h3>
      <div
        class="ecl-accordion2__content"
        hidden=""
        id="accordion-example3-content"
        role="region"
      >
        In the modern global economy trade is essential for growth, jobs and competiveness, and the EU is committed to maintaining an open and rules-based trading system. With the rising threat of protectionism and weakened commitment of large players to global trade governance, the EU must take the lead.
      </div>
    </div>
  </div>
</test>
`;

exports[`EC - Accordion2 renders correctly with extra attributes 1`] = `
<test>
  <div
    class="ecl-accordion2"
    data-ecl-accordion2=""
    data-ecl-auto-init="Accordion2"
    data-test="data-test-value"
    data-test-1="data-test-value-1"
  >
    <div
      class="ecl-accordion2__item"
    >
      <h3
        class="ecl-accordion2__title"
      >
        <button
          aria-controls="accordion-example-content"
          class="ecl-accordion2__toggle"
          data-ecl-accordion2-toggle=""
          type="button"
        >
          <span
            class="ecl-accordion2__toggle-flex"
          >
            <svg
              aria-hidden="true"
              class="ecl-icon ecl-icon--m ecl-accordion2__toggle-icon"
              data-ecl-accordion2-icon=""
              focusable="false"
            >
              <use
                xlink:href="static/icons#ui--plus"
              />
            </svg>
            <span
              class="ecl-accordion2__toggle-title"
            >
              Delivery of last pending proposals, a common Destiny of unity, the hour of European Democracy
            </span>
          </span>
        </button>
      </h3>
      <div
        class="ecl-accordion2__content"
        hidden=""
        id="accordion-example-content"
        role="region"
      >
        The College of Commissioners held today the first weekly meeting of 2019 which was devoted to discussing the challenges of this new year. Commissioners used the opportunity to take stock and discuss the year ahead, including the European elections in May and other important milestones ahead.
      </div>
    </div>
    <div
      class="ecl-accordion2__item"
    >
      <h3
        class="ecl-accordion2__title"
      >
        <button
          aria-controls="accordion-example2-content"
          class="ecl-accordion2__toggle"
          data-ecl-accordion2-toggle=""
          type="button"
        >
          <span
            class="ecl-accordion2__toggle-flex"
          >
            <svg
              aria-hidden="true"
              class="ecl-icon ecl-icon--m ecl-accordion2__toggle-icon"
              data-ecl-accordion2-icon=""
              focusable="false"
            >
              <use
                xlink:href="static/icons#ui--plus"
              />
            </svg>
            <span
              class="ecl-accordion2__toggle-title"
            >
              Spring 2019 Economic Forecast: Growth continues at a more moderate pace
            </span>
          </span>
        </button>
      </h3>
      <div
        class="ecl-accordion2__content"
        hidden=""
        id="accordion-example2-content"
        role="region"
      >
        The European economy is forecast to continue expanding for the seventh year in a row in 2019, with real GDP expected to grow in all EU Member States. As global uncertainties continue to weigh, domestic dynamics are set to support the European economy. Growth is expected to gather pace again next year.
      </div>
    </div>
    <div
      class="ecl-accordion2__item"
    >
      <h3
        class="ecl-accordion2__title"
      >
        <button
          aria-controls="accordion-example3-content"
          class="ecl-accordion2__toggle"
          data-ecl-accordion2-toggle=""
          type="button"
        >
          <span
            class="ecl-accordion2__toggle-flex"
          >
            <svg
              aria-hidden="true"
              class="ecl-icon ecl-icon--m ecl-accordion2__toggle-icon"
              data-ecl-accordion2-icon=""
              focusable="false"
            >
              <use
                xlink:href="static/icons#ui--plus"
              />
            </svg>
            <span
              class="ecl-accordion2__toggle-title"
            >
              Delivery of last pending proposals, a common Destiny of unity, the hour of European Democracy
            </span>
          </span>
        </button>
      </h3>
      <div
        class="ecl-accordion2__content"
        hidden=""
        id="accordion-example3-content"
        role="region"
      >
        In the modern global economy trade is essential for growth, jobs and competiveness, and the EU is committed to maintaining an open and rules-based trading system. With the rising threat of protectionism and weakened commitment of large players to global trade governance, the EU must take the lead.
      </div>
    </div>
  </div>
</test>
`;

exports[`EC - Accordion2 renders correctly with extra class names 1`] = `
<test>
  <div
    class="ecl-accordion2 custom-class custom-class--test"
    data-ecl-accordion2=""
    data-ecl-auto-init="Accordion2"
  >
    <div
      class="ecl-accordion2__item"
    >
      <h3
        class="ecl-accordion2__title"
      >
        <button
          aria-controls="accordion-example-content"
          class="ecl-accordion2__toggle"
          data-ecl-accordion2-toggle=""
          type="button"
        >
          <span
            class="ecl-accordion2__toggle-flex"
          >
            <svg
              aria-hidden="true"
              class="ecl-icon ecl-icon--m ecl-accordion2__toggle-icon"
              data-ecl-accordion2-icon=""
              focusable="false"
            >
              <use
                xlink:href="static/icons#ui--plus"
              />
            </svg>
            <span
              class="ecl-accordion2__toggle-title"
            >
              Delivery of last pending proposals, a common Destiny of unity, the hour of European Democracy
            </span>
          </span>
        </button>
      </h3>
      <div
        class="ecl-accordion2__content"
        hidden=""
        id="accordion-example-content"
        role="region"
      >
        The College of Commissioners held today the first weekly meeting of 2019 which was devoted to discussing the challenges of this new year. Commissioners used the opportunity to take stock and discuss the year ahead, including the European elections in May and other important milestones ahead.
      </div>
    </div>
    <div
      class="ecl-accordion2__item"
    >
      <h3
        class="ecl-accordion2__title"
      >
        <button
          aria-controls="accordion-example2-content"
          class="ecl-accordion2__toggle"
          data-ecl-accordion2-toggle=""
          type="button"
        >
          <span
            class="ecl-accordion2__toggle-flex"
          >
            <svg
              aria-hidden="true"
              class="ecl-icon ecl-icon--m ecl-accordion2__toggle-icon"
              data-ecl-accordion2-icon=""
              focusable="false"
            >
              <use
                xlink:href="static/icons#ui--plus"
              />
            </svg>
            <span
              class="ecl-accordion2__toggle-title"
            >
              Spring 2019 Economic Forecast: Growth continues at a more moderate pace
            </span>
          </span>
        </button>
      </h3>
      <div
        class="ecl-accordion2__content"
        hidden=""
        id="accordion-example2-content"
        role="region"
      >
        The European economy is forecast to continue expanding for the seventh year in a row in 2019, with real GDP expected to grow in all EU Member States. As global uncertainties continue to weigh, domestic dynamics are set to support the European economy. Growth is expected to gather pace again next year.
      </div>
    </div>
    <div
      class="ecl-accordion2__item"
    >
      <h3
        class="ecl-accordion2__title"
      >
        <button
          aria-controls="accordion-example3-content"
          class="ecl-accordion2__toggle"
          data-ecl-accordion2-toggle=""
          type="button"
        >
          <span
            class="ecl-accordion2__toggle-flex"
          >
            <svg
              aria-hidden="true"
              class="ecl-icon ecl-icon--m ecl-accordion2__toggle-icon"
              data-ecl-accordion2-icon=""
              focusable="false"
            >
              <use
                xlink:href="static/icons#ui--plus"
              />
            </svg>
            <span
              class="ecl-accordion2__toggle-title"
            >
              Delivery of last pending proposals, a common Destiny of unity, the hour of European Democracy
            </span>
          </span>
        </button>
      </h3>
      <div
        class="ecl-accordion2__content"
        hidden=""
        id="accordion-example3-content"
        role="region"
      >
        In the modern global economy trade is essential for growth, jobs and competiveness, and the EU is committed to maintaining an open and rules-based trading system. With the rising threat of protectionism and weakened commitment of large players to global trade governance, the EU must take the lead.
      </div>
    </div>
  </div>
</test>
`;

exports[`EC - Accordion2 with validation enabled and missing input data returns the right warning message 1`] = `
<test>
  <div
    class="ecl-accordion2"
    data-ecl-accordion2=""
    data-ecl-auto-init="Accordion2"
  >
    <div
      class="ecl-accordion2__item"
    >
      <h3
        class="ecl-accordion2__title"
      >
        <button
          aria-controls="-content"
          class="ecl-accordion2__toggle"
          data-ecl-accordion2-toggle=""
          type="button"
        >
          <span
            class="ecl-accordion2__toggle-flex"
          >
            <svg
              aria-hidden="true"
              class="ecl-icon ecl-icon--m ecl-accordion2__toggle-icon"
              data-ecl-accordion2-icon=""
              focusable="false"
            >
              <use
                xlink:href="static/icons#ui--plus"
              />
            </svg>
            <span
              class="ecl-u-type-color-green ecl-compliance-inner ecl-compliance-success ecl-u-ma-2xs"
              title="[icon] - ecl compliant"
            >
              <svg
                aria-hidden="true"
                class="ecl-icon ecl-icon--xs"
                focusable="false"
              >
                <use
                  xlink:href="static/icons#notifications--success"
                />
              </svg>
            </span>
            <span
              class="ecl-accordion2__toggle-title"
            />
          </span>
        </button>
      </h3>
      <div
        class="ecl-accordion2__content"
        hidden=""
        id="-content"
        role="region"
      >
        The College of Commissioners held today the first weekly meeting of 2019 which was devoted to discussing the challenges of this new year. Commissioners used the opportunity to take stock and discuss the year ahead, including the European elections in May and other important milestones ahead.
      </div>
    </div>
    <div
      class="ecl-accordion2__item"
    >
      <h3
        class="ecl-accordion2__title"
      >
        <button
          aria-controls="accordion-example2-content"
          class="ecl-accordion2__toggle"
          data-ecl-accordion2-toggle=""
          type="button"
        >
          <span
            class="ecl-accordion2__toggle-flex"
          >
            <svg
              aria-hidden="true"
              class="ecl-icon ecl-icon--m ecl-accordion2__toggle-icon"
              data-ecl-accordion2-icon=""
              focusable="false"
            >
              <use
                xlink:href="static/icons#ui--plus"
              />
            </svg>
            <span
              class="ecl-u-type-color-green ecl-compliance-inner ecl-compliance-success ecl-u-ma-2xs"
              title="[icon] - ecl compliant"
            >
              <svg
                aria-hidden="true"
                class="ecl-icon ecl-icon--xs"
                focusable="false"
              >
                <use
                  xlink:href="static/icons#notifications--success"
                />
              </svg>
            </span>
            <span
              class="ecl-accordion2__toggle-title"
            >
              Spring 2019 Economic Forecast: Growth continues at a more moderate pace
            </span>
          </span>
        </button>
      </h3>
      <div
        class="ecl-accordion2__content"
        hidden=""
        id="accordion-example2-content"
        role="region"
      >
        The European economy is forecast to continue expanding for the seventh year in a row in 2019, with real GDP expected to grow in all EU Member States. As global uncertainties continue to weigh, domestic dynamics are set to support the European economy. Growth is expected to gather pace again next year.
      </div>
    </div>
    <div
      class="ecl-accordion2__item"
    >
      <h3
        class="ecl-accordion2__title"
      >
        <button
          aria-controls="accordion-example3-content"
          class="ecl-accordion2__toggle"
          data-ecl-accordion2-toggle=""
          type="button"
        >
          <span
            class="ecl-accordion2__toggle-flex"
          >
            <svg
              aria-hidden="true"
              class="ecl-icon ecl-icon--m ecl-accordion2__toggle-icon"
              data-ecl-accordion2-icon=""
              focusable="false"
            >
              <use
                xlink:href="static/icons#ui--plus"
              />
            </svg>
            <span
              class="ecl-u-type-color-green ecl-compliance-inner ecl-compliance-success ecl-u-ma-2xs"
              title="[icon] - ecl compliant"
            >
              <svg
                aria-hidden="true"
                class="ecl-icon ecl-icon--xs"
                focusable="false"
              >
                <use
                  xlink:href="static/icons#notifications--success"
                />
              </svg>
            </span>
            <span
              class="ecl-accordion2__toggle-title"
            >
              Delivery of last pending proposals, a common Destiny of unity, the hour of European Democracy
            </span>
          </span>
        </button>
      </h3>
      <div
        class="ecl-accordion2__content"
        hidden=""
        id="accordion-example3-content"
        role="region"
      >
        In the modern global economy trade is essential for growth, jobs and competiveness, and the EU is committed to maintaining an open and rules-based trading system. With the rising threat of protectionism and weakened commitment of large players to global trade governance, the EU must take the lead.
      </div>
    </div>
  </div>
  <!-- ecl2-compliance: accordion -->
  <div
    class="ecl2-compliance ecl-u-border-width-1 ecl-u-border-color-red ecl-u-border-style-solid ecl-u-ma-xs ecl-u-pr-s ecl-u-bg-white"
  >
    <p
      class="ecl-u-type-color-grey ecl-u-ml-m ecl-u-type-xs"
    >
      [accordion] -  The {{ id }} property needs to be set in every item to make the component work. {{ label }} property needs to be set to properly render the item.
    </p>
  </div>
</test>
`;
